--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5"
+    
   },
   "eslintConfig": {
     "root": true,
@@ -41,8 +42,7 @@
     "extends": [
       "plugin:vue/vue3-essential",
       "eslint:recommended",
-      "@vue/typescript/recommended",
-      "plugin:prettier/recommended"
+      "@vue/typescript/recommended"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
